@@ -50,7 +50,40 @@
           <version>4.2.0</version>
       </dependency>
   </dependencies>
+
   <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <!-- downgraded due to surefire bug in 2.12 which would not allow running individual tests -->
+              <version>2.11</version>
+              <configuration>
+                  <argLine>-Xms512m -Xmx1g -XX:MaxPermSize=256m -Dcatalina.base=./target -Dcatalina.home=./target</argLine>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <configuration>
+                  <webResources>
+                      <resource>
+                          <!-- this is relative to the pom.xml directory -->
+                          <directory>resources</directory>
+                      </resource>
+                  </webResources>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <configuration>
+                  <url>http://localhost:8080/manager/text</url>
+                  <server>TomcatServer</server>
+                  <path>/thingsmind</path>
+              </configuration>
+          </plugin>
+      </plugins>
       <finalName>thingsmind</finalName>
 
       <resources>
@@ -61,5 +94,22 @@
               </includes>
           </resource>
       </resources>
+      <pluginManagement>
+          <plugins>
+              <plugin>
+                  <groupId>org.apache.tomcat.maven</groupId>
+                  <artifactId>tomcat6-maven-plugin</artifactId>
+                  <version>2.2</version>
+              </plugin>
+              <plugin>
+                  <groupId>org.apache.tomcat.maven</groupId>
+                  <artifactId>tomcat7-maven-plugin</artifactId>
+                  <version>2.2</version>
+              </plugin>
+          </plugins>
+      </pluginManagement>
+
   </build>
+
+
 </project>
